--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ToGodBeTheGloryToday | Fine Art Originals & Prints</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ToGodBeTheGloryToday | Home</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -12,128 +12,149 @@
       background-color: #f8f8f8;
       color: #333;
     }
+
     header {
       background-color: #2c3e50;
-      color: #fff;
-      padding: 30px;
+      color: white;
+      padding: 2rem;
       text-align: center;
     }
+
     header h1 {
       margin: 0;
-      font-size: 2.5rem;
+      font-size: 2rem;
     }
+
     header p {
-      margin-top: 10px;
-      font-size: 1.2rem;
-      font-weight: 300;
+      margin-top: 0.5rem;
+      font-size: 1.1rem;
     }
-    nav {
+
+    nav ul {
+      list-style: none;
       display: flex;
       justify-content: center;
-      background-color: #444;
+      padding: 0;
+      margin: 1rem 0 0 0;
+      gap: 2rem;
     }
-    nav a {
+
+    nav ul li a {
       color: white;
-      padding: 14px 20px;
       text-decoration: none;
-      display: block;
+      font-weight: bold;
     }
-    nav a:hover {
-      background-color: #666;
+
+    nav ul li a:hover {
+      text-decoration: underline;
     }
-    .hero {
-      background: url("hero-placeholder.jpg") center/cover no-repeat;
-      color: white;
-      padding: 100px 20px;
+
+    .section-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+      max-width: 1000px;
+      margin: 3rem auto;
+      padding: 0 1rem;
+    }
+
+    .section {
+      background-color: white;
+      padding: 2rem;
+      border-radius: 8px;
       text-align: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      transition: transform 0.2s;
     }
-    .hero h2 {
-      font-size: 2.5rem;
-      margin-bottom: 15px;
-      text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+
+    .section:hover {
+      transform: translateY(-5px);
     }
-    .hero p {
-      font-size: 1.2rem;
-      margin-bottom: 20px;
+
+    .section h2 {
+      margin-top: 0;
     }
-    .btn {
+
+    .section p {
+      font-size: 0.95rem;
+      line-height: 1.4;
+    }
+
+    .section a {
+      display: inline-block;
+      margin-top: 1rem;
+      padding: 10px 18px;
       background-color: #2c3e50;
       color: white;
-      padding: 12px 25px;
-      border: none;
-      border-radius: 5px;
       text-decoration: none;
-      font-size: 1rem;
+      border-radius: 5px;
     }
-    .btn:hover {
+
+    .section a:hover {
       background-color: #1a252f;
     }
-    section {
-      padding: 50px 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-    section h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-      text-align: center;
-    }
-    section p {
-      text-align: center;
-      font-size: 1.1rem;
-      margin-bottom: 40px;
-    }
+
     footer {
       background-color: #2c3e50;
       color: white;
       text-align: center;
-      padding: 20px;
+      padding: 1.5rem;
+      margin-top: 3rem;
     }
   </style>
 </head>
 <body>
+
   <header>
     <h1>ToGodBeTheGloryToday</h1>
-    <p>Original Artwork & Fine Art Prints in Acrylic, Pencil, and Watercolor</p>
+    <p>Discover original art, high-quality prints, and learn more about the artist.</p>
   </header>
 
   <nav>
-    <a href="index.html">Home</a>
-    <a href="gallery.html">Gallery</a>
-    <a href="shop.html">Shop Prints</a>
-    <a href="contact.html">Contact</a>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="originals.html">Original Art</a></li>
+      <li><a href="reproductions.html">Prints</a></li>
+      <li><a href="biography.html">Biography</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
   </nav>
 
-  <div class="hero">
-    <h2>Art that Speaks from the Heart</h2>
-    <p>Discover expressive works in acrylic, pencil, and watercolor — available as originals or prints on paper and canvas.</p>
-    <a href="shop.html" class="btn">Shop Now</a>
-  </div>
-
-  <section>
-    <h2>About the Artist</h2>
-    <p>
-      ToGodBeTheGloryToday is dedicated to sharing artwork that uplifts, inspires, 
-      and brings beauty into everyday spaces. Each piece is crafted with care and 
-      made available as original one-of-a-kind artworks or high-quality reproductions 
-      on paper and canvas. 
-    </p>
-  </section>
-
-  <section>
-    <h2>Explore & Collect</h2>
-    <p>
-      Whether you are looking for an original acrylic painting, a detailed pencil sketch, 
-      or a watercolor reproduction, our collection is designed to help you find the 
-      perfect piece for your home, office, or as a meaningful gift.
-    </p>
-    <div style="text-align: center;">
-      <a href="gallery.html" class="btn">View Gallery</a>
+  <div class="section-grid">
+    <div class="section">
+      <h2>Original Art</h2>
+      <p>Explore one-of-a-kind original paintings, drawings, and mixed media pieces.</p>
+      <a href="originals.html">View Originals</a>
     </div>
-  </section>
+
+    <div class="section">
+      <h2>Prints & Reproductions</h2>
+      <p>High-quality reproductions of the artwork in paper and canvas formats.</p>
+      <a href="reproductions.html">Shop Prints</a>
+    </div>
+
+    <div class="section">
+      <h2>Artist Biography</h2>
+      <p>Learn about Toni's journey, inspiration, and artistic story.</p>
+      <a href="biography.html">Read Biography</a>
+    </div>
+
+    <div class="section">
+      <h2>Contact</h2>
+      <p>Get in touch with the artist for commissions, questions, or collaborations.</p>
+      <a href="contact.html">Contact</a>
+    </div>
+
+    <div class="section">
+      <h2>Social Media</h2>
+      <p>Follow the artist on social media to see new works, updates, and behind-the-scenes content.</p>
+      <a href="https://www.instagram.com/YOUR_PROFILE" target="_blank">Follow</a>
+    </div>
+  </div>
 
   <footer>
     <p>&copy; 2025 ToGodBeTheGloryToday. All Rights Reserved.</p>
   </footer>
+
 </body>
 </html>
