--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
   <header>
     <h1>ToGodBeTheGloryToday</h1>
-    <p>Discover original art, high-quality prints, and learn more about the artist.</p>
+    <p>Discover original art, high-quality prints, and learn more about the artist Toni Wood.</p>
   </header>
 
   <nav>
@@ -123,37 +123,37 @@
   <div class="section-grid">
     <div class="section">
       <h2>Original Art</h2>
-      <p>Explore one-of-a-kind original paintings, drawings, and mixed media pieces.</p>
+      <p>Explore one-of-a-kind original paintings, drawings, and mixed media pieces by Toni Wood.</p>
       <a href="originals.html">View Originals</a>
     </div>
 
     <div class="section">
       <h2>Prints & Reproductions</h2>
-      <p>High-quality reproductions of the artwork in paper and canvas formats.</p>
+      <p>High-quality reproductions of Toni's artwork in paper and canvas formats, available in multiple sizes.</p>
       <a href="reproductions.html">Shop Prints</a>
     </div>
 
     <div class="section">
       <h2>Artist Biography</h2>
-      <p>Learn about Toni's journey, inspiration, and artistic story.</p>
+      <p>Learn about Toni’s journey, inspiration, and artistic story.</p>
       <a href="biography.html">Read Biography</a>
     </div>
 
     <div class="section">
       <h2>Contact</h2>
-      <p>Get in touch with the artist for commissions, questions, or collaborations.</p>
+      <p>Get in touch with Toni for commissions, questions, or collaborations.</p>
       <a href="contact.html">Contact</a>
     </div>
 
     <div class="section">
-      <h2>Social Media</h2>
-      <p>Follow the artist on social media to see new works, updates, and behind-the-scenes content.</p>
-      <a href="https://www.instagram.com/YOUR_PROFILE" target="_blank">Follow</a>
+      <h2>Follow on Social Media</h2>
+      <p>See new works, updates, and behind-the-scenes content from Toni Wood.</p>
+      <a href="https://www.instagram.com/ToniWoodArt" target="_blank">Follow</a>
     </div>
   </div>
 
   <footer>
-    <p>&copy; 2025 ToGodBeTheGloryToday. All Rights Reserved.</p>
+    <p>&copy; 2025 ToGodBeTheGloryToday | Designed by Toni Wood & KJL Art Sanctuary</p>
   </footer>
 
 </body>
