--- a/reproductions.html
+++ b/reproductions.html
@@ -3,161 +3,174 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Toni Wood Reproductions</title>
+  <title>Toni Wood | Prints & Reproductions</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
       margin: 0;
       padding: 0;
+      background-color: #f8f8f8;
       color: #333;
     }
 
     header {
-      background: #2c3e50;
-      color: #fff;
+      background-color: #2c3e50;
+      color: white;
+      padding: 2rem;
       text-align: center;
-      padding: 2rem 1rem;
     }
 
     header h1 {
-      margin: 0 0 0.5rem 0;
+      margin: 0;
       font-size: 2rem;
     }
 
     header p {
-      margin: 0.5rem 0;
-      font-size: 1rem;
+      margin: 0.5rem 0 0 0;
+      font-size: 1.1rem;
+    }
+
+    nav ul {
+      list-style: none;
+      display: flex;
+      justify-content: center;
+      padding: 0;
+      margin: 1rem 0 2rem 0;
+      gap: 2rem;
+    }
+
+    nav ul li a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav ul li a:hover {
+      text-decoration: underline;
     }
 
     .pricing {
-      margin: 1rem 0;
-      font-size: 1rem;
+      max-width: 900px;
+      margin: 2rem auto;
+      background: white;
+      padding: 1.5rem;
+      border-radius: 8px;
       text-align: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
 
-    .pricing strong {
-      display: block;
+    .pricing h2 {
+      margin-top: 0;
+    }
+
+    .pricing p {
       margin: 0.5rem 0;
+      font-size: 1rem;
     }
 
     .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 2rem;
-      max-width: 1100px;
+      max-width: 1000px;
       margin: 2rem auto;
       padding: 0 1rem;
     }
 
     .gallery-item {
-      background: #fff;
+      background: white;
       border-radius: 8px;
-      overflow: hidden;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      overflow: hidden;
       text-align: center;
-      transition: transform 0.3s, box-shadow 0.3s;
+      transition: transform 0.3s;
     }
 
     .gallery-item:hover {
       transform: scale(1.05);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
 
     .gallery-item img {
       width: 100%;
+      height: auto;
       display: block;
-      border-bottom: 1px solid #ddd;
     }
 
     .gallery-item h3 {
-      margin: 0.8rem 0;
+      margin: 0.5rem 0 1rem 0;
       font-size: 1.1rem;
-      color: #2c3e50;
-    }
-
-    .see-full {
-      display: inline-block;
-      margin-bottom: 1rem;
-      padding: 6px 12px;
-      background: #2c3e50;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 4px;
-      font-size: 0.9rem;
-      transition: background 0.3s;
-    }
-
-    .see-full:hover {
-      background: #34495e;
     }
 
     footer {
-      background: #2c3e50;
-      color: #fff;
+      background-color: #2c3e50;
+      color: white;
       text-align: center;
-      padding: 1rem 0;
-      margin-top: 2rem;
-      font-size: 0.9rem;
+      padding: 1.5rem;
+      margin-top: 3rem;
     }
+
   </style>
 </head>
 <body>
 
-<header>
-  <h1>Toni's Reproductions</h1>
-  <p>Sizes & Pricing:</p>
+  <header>
+    <h1>Toni Wood | Prints & Reproductions</h1>
+    <p>All prints available in multiple sizes and framing options</p>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="originals.html">Original Art</a></li>
+      <li><a href="reproductions.html">Prints</a></li>
+      <li><a href="biography.html">Biography</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
   <div class="pricing">
-    <strong>8 x 10" image, matted to 11 x 14", clear resealable wrap: $40</strong>
-    <strong>16 x 20" image, clear resealable wrap: $125</strong>
-    <strong>8 x 10" framed in black 2" frame with white mat: $125</strong>
-    <strong>16 x 20" framed in black 2" frame with white mat: $275</strong>
-  </div>
-</header>
-
-<section class="gallery">
-
-  <div class="gallery-item">
-    <img src="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Children%20playing.jpg" alt="Children playing">
-    <h3>Children Playing</h3>
-    <a href="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Children%20playing.jpg" target="_blank" class="see-full">See Full Image</a>
+    <h2>Pricing & Sizes</h2>
+    <p>8 x 10" image matted to 11 x 14" in clear resealable wrap: <strong>$40</strong></p>
+    <p>16 x 20" image in 20 x 24" clear resealable wrap: <strong>$125</strong></p>
+    <p>8 x 10" framed in black 2" frame with white mat: <strong>$125</strong></p>
+    <p>16 x 20" framed in black 2" frame with white mat: <strong>$275</strong></p>
   </div>
 
-  <div class="gallery-item">
-    <img src="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Farm%20Land.jpg" alt="Farm Land">
-    <h3>Farm Land</h3>
-    <a href="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Farm%20Land.jpg" target="_blank" class="see-full">See Full Image</a>
+  <div class="gallery">
+    <div class="gallery-item">
+      <img src="assets/Children%20playing.jpg" alt="Children Playing">
+      <h3>Children Playing</h3>
+    </div>
+
+    <div class="gallery-item">
+      <img src="assets/Farm%20Land.jpg" alt="Farm Land">
+      <h3>Farm Land</h3>
+    </div>
+
+    <div class="gallery-item">
+      <img src="assets/Flowers%20of%20praises.jpg" alt="Flowers of Praises">
+      <h3>Flowers of Praises</h3>
+    </div>
+
+    <div class="gallery-item">
+      <img src="assets/Hats%20and%20pocket%20books.jpg" alt="Hats and Pocket Books">
+      <h3>Hats and Pocket Books</h3>
+    </div>
+
+    <div class="gallery-item">
+      <img src="assets/Sunday%20morning%20.jpg" alt="Sunday Morning">
+      <h3>Sunday Morning</h3>
+    </div>
+
+    <div class="gallery-item">
+      <img src="assets/Up%20above%20my%20head.jpg" alt="Up Above My Head">
+      <h3>Up Above My Head</h3>
+    </div>
   </div>
 
-  <div class="gallery-item">
-    <img src="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Flowers%20of%20praises.jpg" alt="Flowers of Praises">
-    <h3>Flowers of Praises</h3>
-    <a href="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Flowers%20of%20praises.jpg" target="_blank" class="see-full">See Full Image</a>
-  </div>
-
-  <div class="gallery-item">
-    <img src="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Hats%20and%20pocket%20books.jpg" alt="Hats and Pocket Books">
-    <h3>Hats and Pocket Books</h3>
-    <a href="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Hats%20and%20pocket%20books.jpg" target="_blank" class="see-full">See Full Image</a>
-  </div>
-
-  <div class="gallery-item">
-    <img src="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Sunday%20morning%20.jpg" alt="Sunday Morning">
-    <h3>Sunday Morning</h3>
-    <a href="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Sunday%20morning%20.jpg" target="_blank" class="see-full">See Full Image</a>
-  </div>
-
-  <div class="gallery-item">
-    <img src="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Up%20above%20my%20head.jpg" alt="Up Above My Head">
-    <h3>Up Above My Head</h3>
-    <a href="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Up%20above%20my%20head.jpg" target="_blank" class="see-full">See Full Image</a>
-  </div>
-
-</section>
-
-<footer>
-  <p>© 2025 Toni Wood | To God Be The Glory</p>
-</footer>
+  <footer>
+    <p>&copy; 2025 Toni Wood | To God Be The Glory | All Rights Reserved</p>
+  </footer>
 
 </body>
 </html>
