--- a/biography.html
+++ b/biography.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Artist Toni Q Wood Biography</title>
+  <title>Toni Wood | Biography</title>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
-      background-color: #f8f8f8;
+      font-family: Georgia, 'Times New Roman', serif;
       margin: 0;
       padding: 0;
-      color: #333;
+      background-color: #ffffff;
+      color: #333333;
       line-height: 1.6;
     }
 
@@ -23,14 +23,12 @@
 
     header h1 {
       margin: 0;
-      font-size: 2.2rem;
-      letter-spacing: 1px;
+      font-size: 2.5rem;
     }
 
     header p {
       margin-top: 0.5rem;
-      font-size: 1.1rem;
-      color: #ecf0f1;
+      font-size: 1.2rem;
     }
 
     nav ul {
@@ -46,6 +44,7 @@
       color: white;
       text-decoration: none;
       font-weight: bold;
+      font-size: 1rem;
     }
 
     nav ul li a:hover {
@@ -55,39 +54,36 @@
     .content {
       max-width: 900px;
       margin: 3rem auto;
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      padding: 2rem;
+      padding: 0 1rem;
+      text-align: left;
+    }
+
+    .content h2 {
+      font-size: 2rem;
+      color: #2c3e50;
+      margin-bottom: 1rem;
       text-align: center;
     }
 
     .content img {
+      display: block;
       max-width: 300px;
-      height: auto;
+      margin: 1rem auto;
       border-radius: 8px;
-      margin-bottom: 1.5rem;
-    }
-
-    .content h2 {
-      font-size: 1.8rem;
-      color: #2c3e50;
-      margin-bottom: 1rem;
     }
 
     .content p {
-      font-size: 1.05rem;
-      text-align: justify;
+      font-size: 1rem;
       margin-bottom: 1.5rem;
+      text-align: justify;
     }
 
     footer {
       background-color: #2c3e50;
       color: white;
       text-align: center;
-      padding: 1rem 0;
+      padding: 1.5rem;
       margin-top: 3rem;
-      font-size: 0.9rem;
     }
 
     a.social-link {
@@ -102,26 +98,29 @@
   </style>
 </head>
 <body>
+
   <header>
-    <h1>Artist Toni Q Wood Biography</h1>
+    <h1>Toni Wood</h1>
     <p>Faith • Love • Art • Purpose</p>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="biography.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
   </header>
 
-  <section class="content">
-    <img src="toniwood-portrait.jpg" alt="Portrait of Toni Wood">
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="originals.html">Original Art</a></li>
+      <li><a href="reproductions.html">Prints</a></li>
+      <li><a href="biography.html">Biography</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <main class="content">
+    <img src="assets/toni-portrait.jpg" alt="Portrait of Toni Wood">
     <h2>About the Artist – Toni Wood</h2>
 
     <p>Toni Wood is a self-taught artist whose creative journey began in 2018 while taking art classes at her church. What started as a new experience quickly became a lifelong passion — a way to express her faith, love, and culture through color and movement.</p>
 
-    <p>Working with acrylic, pencil, and watercolor, Toni’s art radiates peace and positivity. She’s especially drawn to acrylic for its vibrant tones and quick-drying quality, which reflect her joyful, faith-filled spirit. Guided by her favorite scripture — “I can do all things through Christ who strengthens me” — Toni paints from the heart, creating work that uplifts and inspires.</p>
+    <p>Working with acrylic, pencil, and watercolor, Toni’s art radiates peace and positivity. She’s especially drawn to acrylic for its vibrant tones and quick-drying quality, reflecting her joyful, faith-filled spirit. Guided by her favorite scripture — “I can do all things through Christ who strengthens me” — Toni paints from the heart, creating work that uplifts and inspires.</p>
 
     <p>Her art has been featured in church exhibitions and local showcases, where her message resonates deeply: creativity is a gift from God, and it’s never too late to discover it. Each piece she creates is an invitation to see the beauty of faith, love, and perseverance.</p>
 
@@ -130,10 +129,11 @@
       <strong>Website:</strong> 
       <a href="https://www.ToniWoodArt.com" target="_blank" class="social-link">www.ToniWoodArt.com</a>
     </p>
-  </section>
+  </main>
 
   <footer>
-    <p>© 2025 Toni Wood | Designed with purpose and faith | To God Be The Glory</p>
+    <p>&copy; 2025 ToGodBeTheGloryToday | Designed by Toni Wood & KJL Art Sanctuary</p>
   </footer>
+
 </body>
 </html>
