--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact | ToGodBeTheGloryToday</title>
+  <title>Contact Toni Wood</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f8f8f8;
+      font-family: Georgia, 'Times New Roman', serif;
       margin: 0;
       padding: 0;
-      color: #333;
+      background-color: #ffffff;
+      color: #333333;
+      line-height: 1.6;
     }
 
     header {
@@ -22,12 +23,12 @@
 
     header h1 {
       margin: 0;
-      font-size: 2rem;
+      font-size: 2.5rem;
     }
 
     header p {
       margin-top: 0.5rem;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
     }
 
     nav ul {
@@ -43,24 +44,24 @@
       color: white;
       text-decoration: none;
       font-weight: bold;
+      font-size: 1rem;
     }
 
     nav ul li a:hover {
       text-decoration: underline;
     }
 
-    .content {
-      max-width: 700px;
+    main.content {
+      max-width: 900px;
       margin: 3rem auto;
       padding: 0 1rem;
-      background: white;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      padding: 2rem;
+      text-align: left;
     }
 
-    .content h2 {
+    main.content h2 {
       text-align: center;
+      font-size: 2rem;
+      color: #2c3e50;
       margin-bottom: 1.5rem;
     }
 
@@ -76,10 +77,10 @@
 
     input, textarea {
       padding: 10px;
+      font-size: 1rem;
       border-radius: 5px;
       border: 1px solid #ccc;
       width: 100%;
-      font-size: 1rem;
     }
 
     textarea {
@@ -88,7 +89,84 @@
     }
 
     button {
+      padding: 12px 20px;
+      font-size: 1rem;
       background-color: #2c3e50;
       color: white;
       border: none;
-      padding: 12px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      width: 150px;
+      align-self: center;
+    }
+
+    button:hover {
+      background-color: #1a252f;
+    }
+
+    footer {
+      background-color: #2c3e50;
+      color: white;
+      text-align: center;
+      padding: 1.5rem;
+      margin-top: 3rem;
+    }
+
+    a.social-link {
+      color: #2980b9;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    a.social-link:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Contact Toni Wood</h1>
+    <p>Get in touch for commissions, questions, or collaborations</p>
+  </header>
+
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="originals.html">Original Art</a></li>
+      <li><a href="reproductions.html">Prints</a></li>
+      <li><a href="biography.html">Biography</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
+
+  <main class="content">
+    <h2>Contact Form</h2>
+    <form action="#" method="post">
+      <label for="name">Name</label>
+      <input type="text" id="name" name="name" required>
+
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="subject">Subject</label>
+      <input type="text" id="subject" name="subject">
+
+      <label for="message">Message</label>
+      <textarea id="message" name="message" required></textarea>
+
+      <button type="submit">Send Message</button>
+    </form>
+
+    <p style="text-align:center; margin-top:2rem;">
+      Or reach Toni on Instagram: 
+      <a href="https://www.instagram.com/ToniWoodArt" target="_blank" class="social-link">@ToniWoodArt</a>
+    </p>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 ToGodBeTheGloryToday | Designed by Toni Wood & KJL Art Sanctuary</p>
+  </footer>
+
+</body>
+</html>
