--- a/index.html
+++ b/index.html
@@ -11,23 +11,24 @@
       padding: 0;
       background-color: #ffffff;
       color: #333333;
+      line-height: 1.6;
+      text-align: center;
     }
 
     header {
       background-color: #2c3e50;
       color: white;
-      padding: 2rem;
-      text-align: center;
+      padding: 3rem 1rem;
     }
 
     header h1 {
       margin: 0;
-      font-size: 2.5rem;
+      font-size: 3rem;
     }
 
     header p {
       margin-top: 0.5rem;
-      font-size: 1.2rem;
+      font-size: 1.3rem;
     }
 
     nav ul {
@@ -35,37 +36,43 @@
       display: flex;
       justify-content: center;
       padding: 0;
-      margin: 1rem 0 0 0;
+      margin: 1rem 0 2rem 0;
       gap: 2rem;
+      flex-wrap: wrap;
     }
 
     nav ul li a {
       color: white;
       text-decoration: none;
       font-weight: bold;
-      font-size: 1rem;
+      font-size: 1.1rem;
+      padding: 0.5rem 1rem;
+      border-radius: 4px;
+      transition: background 0.3s;
     }
 
     nav ul li a:hover {
-      text-decoration: underline;
+      background-color: #1a252f;
     }
 
-    .section-grid {
+    main.section-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 2rem;
       max-width: 1000px;
-      margin: 3rem auto;
+      margin: 2rem auto;
       padding: 0 1rem;
+      justify-items: center;
+      text-align: center;
     }
 
     .section {
-      background-color: #ffffff;
+      background-color: #f8f8f8;
       padding: 2rem;
       border-radius: 8px;
-      text-align: center;
       box-shadow: 0 2px 6px rgba(0,0,0,0.1);
       transition: transform 0.2s;
+      width: 100%;
     }
 
     .section:hover {
@@ -73,25 +80,25 @@
     }
 
     .section h2 {
-      margin-top: 0;
       font-size: 1.8rem;
       color: #2c3e50;
+      margin-bottom: 1rem;
     }
 
     .section p {
-      font-size: 1rem;
-      line-height: 1.5;
+      font-size: 1.05rem;
+      margin-bottom: 1rem;
     }
 
     .section a {
       display: inline-block;
-      margin-top: 1rem;
+      margin-top: 0.5rem;
       padding: 10px 18px;
       background-color: #2c3e50;
       color: white;
       text-decoration: none;
       border-radius: 5px;
-      font-weight: bold;
+      font-size: 1rem;
     }
 
     .section a:hover {
@@ -102,8 +109,20 @@
       background-color: #2c3e50;
       color: white;
       text-align: center;
-      padding: 1.5rem;
+      padding: 2rem 1rem;
       margin-top: 3rem;
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2rem;
+      }
+      header p {
+        font-size: 1rem;
+      }
+      .section h2 {
+        font-size: 1.5rem;
+      }
     }
   </style>
 </head>
