--- a/biography.html
+++ b/biography.html
@@ -3,105 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Toni Wood | Biography</title>
-  <style>
-    body {
-      font-family: Georgia, 'Times New Roman', serif;
-      margin: 0;
-      padding: 0;
-      background-color: #ffffff;
-      color: #333333;
-      line-height: 1.6;
-    }
-
-    header {
-      background-color: #2c3e50;
-      color: white;
-      padding: 2rem;
-      text-align: center;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 2.5rem;
-    }
-
-    header p {
-      margin-top: 0.5rem;
-      font-size: 1.2rem;
-    }
-
-    nav ul {
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      padding: 0;
-      margin: 1rem 0 0 0;
-      gap: 2rem;
-    }
-
-    nav ul li a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 1rem;
-    }
-
-    nav ul li a:hover {
-      text-decoration: underline;
-    }
-
-    .content {
-      max-width: 900px;
-      margin: 3rem auto;
-      padding: 0 1rem;
-      text-align: left;
-    }
-
-    .content h2 {
-      font-size: 2rem;
-      color: #2c3e50;
-      margin-bottom: 1rem;
-      text-align: center;
-    }
-
-    .content img {
-      display: block;
-      max-width: 300px;
-      margin: 1rem auto;
-      border-radius: 8px;
-    }
-
-    .content p {
-      font-size: 1rem;
-      margin-bottom: 1.5rem;
-      text-align: justify;
-    }
-
-    footer {
-      background-color: #2c3e50;
-      color: white;
-      text-align: center;
-      padding: 1.5rem;
-      margin-top: 3rem;
-    }
-
-    a.social-link {
-      color: #2980b9;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    a.social-link:hover {
-      text-decoration: underline;
-    }
-  </style>
+  <title>ToGodBeTheGloryToday | Biography</title>
+  <!-- Link to external CSS -->
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
   <header>
     <h1>Toni Wood</h1>
-    <p>Faith • Love • Art • Purpose</p>
+    <p>Discover the journey and inspiration behind the artist.</p>
   </header>
 
   <nav>
@@ -114,21 +24,26 @@
     </ul>
   </nav>
 
-  <main class="content">
-    <img src="assets/toni-portrait.jpg" alt="Portrait of Toni Wood">
-    <h2>About the Artist – Toni Wood</h2>
+  <main class="section-grid">
+    <div class="section">
+      <h2>About Toni Wood</h2>
+      <p>Toni Wood is a passionate self-taught artist who discovered her love for painting later in life. Her journey reflects creativity, resilience, and a desire to inspire others through visual storytelling.</p>
+    </div>
 
-    <p>Toni Wood is a self-taught artist whose creative journey began in 2018 while taking art classes at her church. What started as a new experience quickly became a lifelong passion — a way to express her faith, love, and culture through color and movement.</p>
+    <div class="section">
+      <h2>Inspiration</h2>
+      <p>Toni draws inspiration from everyday life, nature, and her personal experiences. Each piece reflects a story, emotion, or moment that resonates with the viewer, connecting them to the artwork on a personal level.</p>
+    </div>
 
-    <p>Working with acrylic, pencil, and watercolor, Toni’s art radiates peace and positivity. She’s especially drawn to acrylic for its vibrant tones and quick-drying quality, reflecting her joyful, faith-filled spirit. Guided by her favorite scripture — “I can do all things through Christ who strengthens me” — Toni paints from the heart, creating work that uplifts and inspires.</p>
+    <div class="section">
+      <h2>Artistic Journey</h2>
+      <p>Starting later than many artists, Toni’s journey is a testament to the power of following one’s passion. Through perseverance and experimentation, she has developed a unique style that combines color, texture, and emotion in every piece.</p>
+    </div>
 
-    <p>Her art has been featured in church exhibitions and local showcases, where her message resonates deeply: creativity is a gift from God, and it’s never too late to discover it. Each piece she creates is an invitation to see the beauty of faith, love, and perseverance.</p>
-
-    <p><strong>Follow Toni Wood on Instagram:</strong> 
-      <a href="https://www.instagram.com/ToniWoodArt" target="_blank" class="social-link">@ToniWoodArt</a><br>
-      <strong>Website:</strong> 
-      <a href="https://www.ToniWoodArt.com" target="_blank" class="social-link">www.ToniWoodArt.com</a>
-    </p>
+    <div class="section">
+      <h2>Recognition</h2>
+      <p>Her work has been featured in exhibitions and galleries, captivating audiences with vibrant compositions and evocative storytelling. Toni continues to grow as an artist, exploring new mediums and techniques.</p>
+    </div>
   </main>
 
   <footer>
