--- a/reproductions.html
+++ b/reproductions.html
@@ -3,20 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Toni Wood | Prints & Reproductions</title>
+  <title>ToGodBeTheGloryToday | Prints & Reproductions</title>
   <style>
     body {
-      font-family: Georgia, 'Times New Roman', serif;
+      font-family: 'Times New Roman', serif;
       margin: 0;
       padding: 0;
       background-color: #ffffff;
-      color: #333333;
-      line-height: 1.6;
+      color: #333;
     }
 
     header {
       background-color: #2c3e50;
-      color: white;
+      color: #fff;
       padding: 2rem;
       text-align: center;
     }
@@ -36,106 +35,101 @@
       display: flex;
       justify-content: center;
       padding: 0;
-      margin: 1rem 0 0 0;
+      margin: 1rem 0;
       gap: 2rem;
     }
 
     nav ul li a {
-      color: white;
+      color: #2c3e50;
       text-decoration: none;
       font-weight: bold;
-      font-size: 1rem;
+      font-size: 1.1rem;
     }
 
     nav ul li a:hover {
       text-decoration: underline;
     }
 
-    .pricing {
-      max-width: 900px;
+    main {
+      max-width: 1200px;
       margin: 2rem auto;
-      text-align: center;
       padding: 0 1rem;
-      font-size: 1rem;
     }
 
-    .pricing h2 {
-      color: #2c3e50;
+    .section {
+      margin-bottom: 2rem;
+      text-align: center;
+    }
+
+    .section h2 {
       font-size: 2rem;
       margin-bottom: 1rem;
     }
 
-    .pricing p {
-      margin: 0.5rem 0;
+    .section p {
+      font-size: 1.1rem;
+      line-height: 1.5;
+      margin-bottom: 1rem;
     }
 
-    .gallery {
-      max-width: 1000px;
-      margin: 2rem auto;
+    .reproductions-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 2rem;
-      padding: 0 1rem;
+      margin-top: 1rem;
     }
 
-    .art-item {
-      position: relative;
-      overflow: hidden;
+    .product {
+      background-color: #f8f8f8;
+      padding: 1rem;
       border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
       text-align: center;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      transition: transform 0.3s;
-      background: #fff;
-      padding-bottom: 1rem;
+      transition: transform 0.3s, box-shadow 0.3s;
+      cursor: pointer;
     }
 
-    .art-item img {
+    .product img {
       max-width: 100%;
-      height: auto;
+      border-radius: 6px;
       transition: transform 0.3s;
-      border-radius: 8px;
     }
 
-    .art-item:hover img {
+    .product:hover {
       transform: scale(1.05);
+      box-shadow: 0 8px 15px rgba(0,0,0,0.2);
     }
 
-    .art-title {
+    .product h3 {
       margin-top: 0.8rem;
-      font-weight: bold;
-      font-size: 1rem;
-      color: #2c3e50;
-    }
-
-    .art-button {
-      display: inline-block;
-      margin-top: 0.5rem;
-      padding: 8px 14px;
-      background-color: #2c3e50;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      font-size: 0.9rem;
-    }
-
-    .art-button:hover {
-      background-color: #1a252f;
+      font-size: 1.2rem;
     }
 
     footer {
       background-color: #2c3e50;
-      color: white;
+      color: #fff;
       text-align: center;
       padding: 1.5rem;
       margin-top: 3rem;
+    }
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 2rem;
+      }
+
+      nav ul {
+        flex-direction: column;
+        gap: 1rem;
+      }
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Toni Wood Prints & Reproductions</h1>
-    <p>Discover high-quality reproductions of Toni's artwork.</p>
+    <h1>Toni Wood Reproductions</h1>
+    <p>High-quality reproductions of Toni Wood's artwork in multiple formats and sizes.</p>
   </header>
 
   <nav>
@@ -148,51 +142,46 @@
     </ul>
   </nav>
 
-  <section class="pricing">
-    <h2>Pricing</h2>
-    <p>8 x 10" matted to 11 x 14" in clear resealable wrap – <strong>$40</strong></p>
-    <p>16 x 20" image in 20 x 24" clear resealable wrap – <strong>$125</strong></p>
-    <p>8 x 10" framed in black 2" frame with white mat – <strong>$125</strong></p>
-    <p>16 x 20" framed in black 2" frame with white mat – <strong>$275</strong></p>
-  </section>
-
-  <section class="gallery">
-    <div class="art-item">
-      <img src="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Children%20playing.jpg" alt="Children playing">
-      <div class="art-title">Children Playing</div>
-      <a href="#" class="art-button">See Full Image</a>
+  <main>
+    <div class="section">
+      <h2>Pricing & Sizes</h2>
+      <p><strong>8 x 10" image size</strong> (matted to 11 x 14" in clear resealable wrap): $40</p>
+      <p><strong>16 x 20" image size</strong> (in 20 x 24" clear resealable wrap): $125</p>
+      <p><strong>Framed in black 2" frame with white mat:</strong> 8 x 10": $125 | 16 x 20": $275</p>
+      <p>All reproductions are high-quality, archival, and ready to display.</p>
     </div>
 
-    <div class="art-item">
-      <img src="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Farm%20Land.jpg" alt="Farm Land">
-      <div class="art-title">Farm Land</div>
-      <a href="#" class="art-button">See Full Image</a>
+    <div class="section">
+      <h2>Gallery</h2>
+      <p>Click on each image to see the full artwork. Prices are consistent for all reproductions.</p>
+      <div class="reproductions-grid">
+        <div class="product">
+          <img src="assets/images/Children playing.jpg" alt="Children Playing">
+          <h3>Children Playing</h3>
+        </div>
+        <div class="product">
+          <img src="assets/images/Farm Land.jpg" alt="Farm Land">
+          <h3>Farm Land</h3>
+        </div>
+        <div class="product">
+          <img src="assets/images/Flowers of praises.jpg" alt="Flowers of Praises">
+          <h3>Flowers of Praises</h3>
+        </div>
+        <div class="product">
+          <img src="assets/images/Hats and pocket books.jpg" alt="Hats and Pocket Books">
+          <h3>Hats and Pocket Books</h3>
+        </div>
+        <div class="product">
+          <img src="assets/images/Sunday morning.jpg" alt="Sunday Morning">
+          <h3>Sunday Morning</h3>
+        </div>
+        <div class="product">
+          <img src="assets/images/Up above my head.jpg" alt="Up Above My Head">
+          <h3>Up Above My Head</h3>
+        </div>
+      </div>
     </div>
-
-    <div class="art-item">
-      <img src="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Flowers%20of%20praises.jpg" alt="Flowers of Praises">
-      <div class="art-title">Flowers of Praises</div>
-      <a href="#" class="art-button">See Full Image</a>
-    </div>
-
-    <div class="art-item">
-      <img src="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Hats%20and%20pocket%20books.jpg" alt="Hats and Pocket Books">
-      <div class="art-title">Hats and Pocket Books</div>
-      <a href="#" class="art-button">See Full Image</a>
-    </div>
-
-    <div class="art-item">
-      <img src="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Sunday%20morning%20.jpg" alt="Sunday Morning">
-      <div class="art-title">Sunday Morning</div>
-      <a href="#" class="art-button">See Full Image</a>
-    </div>
-
-    <div class="art-item">
-      <img src="https://github.com/kjlartsanctuary/togodbetheglorytoday/blob/main/assets/Up%20above%20my%20head.jpg" alt="Up Above My Head">
-      <div class="art-title">Up Above My Head</div>
-      <a href="#" class="art-button">See Full Image</a>
-    </div>
-  </section>
+  </main>
 
   <footer>
     <p>&copy; 2025 ToGodBeTheGloryToday | Designed by Toni Wood & KJL Art Sanctuary</p>
