--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     }
 
     header {
-      background-color: #ffffff; /* remove blue */
+      background-color: #ffffff; /* white header */
       color: #000000;
       padding: 2rem;
       text-align: center;
@@ -61,7 +61,7 @@
     }
 
     .section {
-      background-color: #ffffff; /* white section */
+      background-color: #ffffff;
       padding: 2rem;
       border-radius: 8px;
       text-align: center;
@@ -97,8 +97,8 @@
     }
 
     footer {
-      background-color: #ffffff; /* white footer */
-      color: #000000; 
+      background-color: #ffffff;
+      color: #000000;
       text-align: center;
       padding: 1.5rem;
       margin-top: 3rem;
@@ -110,13 +110,12 @@
 
   <header>
     <h1>ToGodBeTheGloryToday</h1>
-    <p>Discover original art, high-quality prints, and learn more about the artist Toni Wood.</p>
+    <p>High-quality reproductions of Toni Wood's artwork, available in multiple sizes.</p>
   </header>
 
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="originals.html">Original Art</a></li>
       <li><a href="reproductions.html">Prints</a></li>
       <li><a href="biography.html">Biography</a></li>
       <li><a href="contact.html">Contact</a></li>
@@ -125,14 +124,8 @@
 
   <main class="section-grid">
     <div class="section">
-      <h2>Original Art</h2>
-      <p>Explore one-of-a-kind original paintings, drawings, and mixed media pieces by Toni Wood.</p>
-      <a href="originals.html">View Originals</a>
-    </div>
-
-    <div class="section">
       <h2>Prints & Reproductions</h2>
-      <p>High-quality reproductions of Toni's artwork in paper and canvas formats, available in multiple sizes.</p>
+      <p>Explore high-quality reproductions of Toni's artwork in paper and canvas formats. Original artwork to be addes soon!.</p>
       <a href="reproductions.html">Shop Prints</a>
     </div>
 
