--- a/reproductions.html
+++ b/reproductions.html
@@ -14,8 +14,8 @@
     }
 
     header {
-      background-color: #2c3e50;
-      color: #fff;
+      background-color: #ffffff;
+      color: #000000;
       padding: 2rem;
       text-align: center;
     }
@@ -40,7 +40,7 @@
     }
 
     nav ul li a {
-      color: #2c3e50;
+      color: #000000;
       text-decoration: none;
       font-weight: bold;
       font-size: 1.1rem;
@@ -106,18 +106,15 @@
     }
 
     footer {
-      background-color: #2c3e50;
-      color: #fff;
+      background-color: #ffffff;
+      color: #000000;
       text-align: center;
       padding: 1.5rem;
       margin-top: 3rem;
+      border-top: 1px solid #ccc;
     }
 
     @media (max-width: 600px) {
-      header h1 {
-        font-size: 2rem;
-      }
-
       nav ul {
         flex-direction: column;
         gap: 1rem;
@@ -156,27 +153,27 @@
       <p>Click on each image to see the full artwork. Prices are consistent for all reproductions.</p>
       <div class="reproductions-grid">
         <div class="product">
-          <img src="assets/images/Children playing.jpg" alt="Children Playing">
+          <img src="assets/Children%20playing.jpg" alt="Children Playing">
           <h3>Children Playing</h3>
         </div>
         <div class="product">
-          <img src="assets/images/Farm Land.jpg" alt="Farm Land">
+          <img src="assets/Farm%20Land.jpg" alt="Farm Land">
           <h3>Farm Land</h3>
         </div>
         <div class="product">
-          <img src="assets/images/Flowers of praises.jpg" alt="Flowers of Praises">
+          <img src="assets/Flowers%20of%20praises.jpg" alt="Flowers of Praises">
           <h3>Flowers of Praises</h3>
         </div>
         <div class="product">
-          <img src="assets/images/Hats and pocket books.jpg" alt="Hats and Pocket Books">
+          <img src="assets/Hats%20and%20pocket%20books.jpg" alt="Hats and Pocket Books">
           <h3>Hats and Pocket Books</h3>
         </div>
         <div class="product">
-          <img src="assets/images/Sunday morning.jpg" alt="Sunday Morning">
+          <img src="assets/Sunday%20morning%20.jpg" alt="Sunday Morning">
           <h3>Sunday Morning</h3>
         </div>
         <div class="product">
-          <img src="assets/images/Up above my head.jpg" alt="Up Above My Head">
+          <img src="assets/Up%20above%20my%20head.jpg" alt="Up Above My Head">
           <h3>Up Above My Head</h3>
         </div>
       </div>
