--- a/reproductions.html
+++ b/reproductions.html
@@ -10,12 +10,12 @@
       margin: 0;
       padding: 0;
       background-color: #ffffff;
-      color: #333;
+      color: #000;
     }
 
     header {
       background-color: #ffffff;
-      color: #000000;
+      color: #000;
       padding: 2rem;
       text-align: center;
     }
@@ -40,7 +40,7 @@
     }
 
     nav ul li a {
-      color: #000000;
+      color: #000;
       text-decoration: none;
       font-weight: bold;
       font-size: 1.1rem;
@@ -80,41 +80,57 @@
     }
 
     .product {
-      background-color: #f8f8f8;
-      padding: 1rem;
-      border-radius: 8px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-      text-align: center;
-      transition: transform 0.3s, box-shadow 0.3s;
       cursor: pointer;
     }
 
     .product img {
-      max-width: 100%;
-      border-radius: 6px;
+      width: 100%;
+      border-radius: 8px;
       transition: transform 0.3s;
     }
 
-    .product:hover {
+    .product img:hover {
       transform: scale(1.05);
-      box-shadow: 0 8px 15px rgba(0,0,0,0.2);
-    }
-
-    .product h3 {
-      margin-top: 0.8rem;
-      font-size: 1.2rem;
     }
 
     footer {
       background-color: #ffffff;
-      color: #000000;
+      color: #000;
       text-align: center;
       padding: 1.5rem;
       margin-top: 3rem;
       border-top: 1px solid #ccc;
     }
 
+    /* Lightbox overlay */
+    #lightbox {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.8);
+      display: none;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+
+    #lightbox img {
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 8px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
+    }
+
+    #lightbox:target {
+      display: flex;
+    }
+
     @media (max-width: 600px) {
+      header h1 {
+        font-size: 2rem;
+      }
       nav ul {
         flex-direction: column;
         gap: 1rem;
@@ -132,7 +148,6 @@
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="originals.html">Original Art</a></li>
       <li><a href="reproductions.html">Prints</a></li>
       <li><a href="biography.html">Biography</a></li>
       <li><a href="contact.html">Contact</a></li>
@@ -142,43 +157,56 @@
   <main>
     <div class="section">
       <h2>Pricing & Sizes</h2>
-      <p><strong>8 x 10" image size</strong> (matted to 11 x 14" in clear resealable wrap): $40</p>
-      <p><strong>16 x 20" image size</strong> (in 20 x 24" clear resealable wrap): $125</p>
+      <p><strong>8 x 10" image size</strong> (matted to 11 x 14"): $40</p>
+      <p><strong>16 x 20" image size</strong> (in 20 x 24" wrap): $125</p>
       <p><strong>Framed in black 2" frame with white mat:</strong> 8 x 10": $125 | 16 x 20": $275</p>
       <p>All reproductions are high-quality, archival, and ready to display.</p>
     </div>
 
     <div class="section">
       <h2>Gallery</h2>
-      <p>Click on each image to see the full artwork. Prices are consistent for all reproductions.</p>
       <div class="reproductions-grid">
         <div class="product">
-          <img src="assets/Children%20playing.jpg" alt="Children Playing">
-          <h3>Children Playing</h3>
+          <a href="#img1"><img src="assets/Children playing.jpg" alt="Children Playing"></a>
         </div>
         <div class="product">
-          <img src="assets/Farm%20Land.jpg" alt="Farm Land">
-          <h3>Farm Land</h3>
+          <a href="#img2"><img src="assets/Farm Land.jpg" alt="Farm Land"></a>
         </div>
         <div class="product">
-          <img src="assets/Flowers%20of%20praises.jpg" alt="Flowers of Praises">
-          <h3>Flowers of Praises</h3>
+          <a href="#img3"><img src="assets/Flowers of praises.jpg" alt="Flowers of Praises"></a>
         </div>
         <div class="product">
-          <img src="assets/Hats%20and%20pocket%20books.jpg" alt="Hats and Pocket Books">
-          <h3>Hats and Pocket Books</h3>
+          <a href="#img4"><img src="assets/Hats and pocket books.jpg" alt="Hats and Pocket Books"></a>
         </div>
         <div class="product">
-          <img src="assets/Sunday%20morning%20.jpg" alt="Sunday Morning">
-          <h3>Sunday Morning</h3>
+          <a href="#img5"><img src="assets/Sunday morning.jpg" alt="Sunday Morning"></a>
         </div>
         <div class="product">
-          <img src="assets/Up%20above%20my%20head.jpg" alt="Up Above My Head">
-          <h3>Up Above My Head</h3>
+          <a href="#img6"><img src="assets/Up above my head.jpg" alt="Up Above My Head"></a>
         </div>
       </div>
     </div>
   </main>
+
+  <!-- Lightbox sections -->
+  <div id="img1" class="lightbox">
+    <a href="#"><img src="assets/Children playing.jpg" alt="Children Playing"></a>
+  </div>
+  <div id="img2" class="lightbox">
+    <a href="#"><img src="assets/Farm Land.jpg" alt="Farm Land"></a>
+  </div>
+  <div id="img3" class="lightbox">
+    <a href="#"><img src="assets/Flowers of praises.jpg" alt="Flowers of Praises"></a>
+  </div>
+  <div id="img4" class="lightbox">
+    <a href="#"><img src="assets/Hats and pocket books.jpg" alt="Hats and Pocket Books"></a>
+  </div>
+  <div id="img5" class="lightbox">
+    <a href="#"><img src="assets/Sunday morning.jpg" alt="Sunday Morning"></a>
+  </div>
+  <div id="img6" class="lightbox">
+    <a href="#"><img src="assets/Up above my head.jpg" alt="Up Above My Head"></a>
+  </div>
 
   <footer>
     <p>&copy; 2025 ToGodBeTheGloryToday | Designed by Toni Wood & KJL Art Sanctuary</p>
